# SeamCarving

./: CMakeLists.txt  SeamCarver.cpp  SeamCarver.h  main.cpp
